Fix margins for menu to improve alignment

--- a/themes/starter-garden/assets/css/03-components/header-nav.css
+++ b/themes/starter-garden/assets/css/03-components/header-nav.css
@@ -28,6 +28,9 @@
 
     .menu ul li {
         display: inline-block;
+    }
+
+    .menu ul li:not(:last-child) {
         margin-right: var(--space-l);
     }
     
